Bugfix: fix whitespace/spacing issue
On the maintenance page, the margin-bottom ends up getting a grey background color when it should be white.

--- a/sites/all/themes/mcneese_drupal/css/standard.css
+++ b/sites/all/themes/mcneese_drupal/css/standard.css
@@ -39,6 +39,8 @@ div#mcneese_drupal-title_region {
 
   margin-left: 20px;
   margin-right: 20px;
+
+  padding-bottom: 1px;
 }
 
 div#mcneese_drupal-title h1#mcneese_drupal-page_title {
